LU-20520 ptlrpc: pack bulk MDs by on-wire byte count

Clients and servers with different page sizes split a bulk transfer
not aligned to the larger page size into a different number of memory
descriptors (MDs). Both pack with __ptlrpc_prep_bulk_page(), starting
an MD when bd_iov_count hits a multiple of LNET_MAX_IOV, but that
count grows faster on the larger-page peer, which splits pages to keep
each MD within LNET_MTU. The ends place MD boundaries at different
offsets, so the server's bulk GET is sized against a smaller client
MD, LNet drops it as too big, and the write hangs on a PW lock,
retrying forever.

Key the boundary instead on bd_iop_len, the 4KiB-virtual on-wire byte
count identical on both ends: open the first MD, then a new one when
the current reaches LNET_MTU. Each kiov adds at least
PTLRPC_BULK_INTEROP_PAGE_SIZE, so the per-MD LNET_MAX_IOV limit still
holds. This restores agreement for any 4KiB-aligned transfer (all
page-cache IO) to a 4KiB-page server. A large-page server needs a
separate fix: ptlrpc_prep_bulk_exp() sizes the descriptor at the bare
page count, with no room for the split kiovs. Sub-4KiB unaligned
direct IO, whose fragments differ in length, is also not covered.

sanity 119s writes a full-size RPC at a non-page-aligned offset and
fails on an MD-count disagreement, only with a client page larger
than the server's.

119s remounts the client to renegotiate the RPC size, which tears
down and re-creates the client ldlm services with zeroed stats.
lprocfs omits a counter that has never been incremented, so the
120x tests read an empty ldlm_bl_callback sample count and their
(( )) comparison dies on a syntax error. Default those counts to 0.

Assisted-by: Claude:claude-opus-4.8
Fixes: e74ab6aed6ec ("LU-19180 ptlrpc: virtual 4k bulk alignment")
Test-Parameters: clientdistro=rocky9.5 clientarch=aarch64 serverarch=x86_64 testlist=sanity env=ONLY=119s,ONLY_REPEAT=5
Signed-off-by: Chris Horn <chorn@ddn.com>
Change-Id: I6beed07cbb3f282c1141ae6589694378a3f6fee8
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67530
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alexey Lyashkov <alexey.lyashkov@hpe.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Zhenyu Xu <bobijam@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>